--- a/views/dashboard/admin/master-token.ejs
+++ b/views/dashboard/admin/master-token.ejs
@@ -162,7 +162,7 @@
                                         <div class="page-header-icon"><i data-feather="key"></i></div>
                                         Manajemen Token
                                     </h1>
-                                    <div class="page-header-subtitle">Brits Edu Center, <span style="font-style: italic;">Teman belajarmu</span></div>
+                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                                 <div class="col-12 col-xl-auto mt-4">
                                     <a class="btn btn-white" href="/admin/token/tambah">
