--- a/views/dashboard/admin/soal.ejs
+++ b/views/dashboard/admin/soal.ejs
@@ -78,7 +78,7 @@
                                         <div class="page-header-icon"><i data-feather="alert-circle"></i></div>
                                         Welcome, Master!
                                     </h1>
-                                    <div class="page-header-subtitle">Brits Edu Center, <span style="font-style: italic;">Teman belajarmu</span></div>
+                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                             </div>
                         </div>
