--- a/views/dashboard/user/not-member.ejs
+++ b/views/dashboard/user/not-member.ejs
@@ -28,7 +28,7 @@
                                         <div class="page-header-icon"><i data-feather="alert-circle"></i></div>
                                         Halo, Sobat GG
                                     </h1>
-                                    <div class="page-header-subtitle">Brits Edu Center, <span style="font-style: italic;">Teman belajarmu</span></div>
+                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                 <div class="container-xl px-4">
                     
                    <div class="card mt-n10" style="padding: 10px;">
-                    <div class="card-header">Daftar di Brits Edu Center</div>
+                    <div class="card-header">Daftar di Genius Gate</div>
                     <div class="card-body">
                         Kamu belum terdaftar sebagai Siswa GG!
                     </h1>
