--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div class="row row-cols-2 row-cols-md-4">
             <div class="col-sm-4 col-md-3 text-lg-start d-flex flex-column">
                 <h3 class="fs-6 fw-bold text-center">BritsEdu</h3>
-                <p class="text-center">Your learning companion, <em>Teman belajarmu.</em></p>
+                <p class="text-center">Your learning companion, <em>your key to excel.</em></p>
             </div>
             <div class="col-sm-4 col-md-3 text-lg-start d-flex flex-column">
                 <h3 class="fs-6 fw-bold text-center">Learning Programs</h3>
