--- a/views/tryout/index.ejs
+++ b/views/tryout/index.ejs
@@ -52,7 +52,7 @@
         <div class="col-sm-12" style="border:0px solid red">
             <div class="text-left pt-3 pb-2 mb-2" id="formContent">
             <div class="row row-atas "> 
-                <div class="col-sm-4 "><div style="font-size:20px;font-weight:bold">Brits Edu Center</div> <div style="font-size:14px;color:#000">Simulasi | Seleksi Nasional Penerimaan Mahasiswa Baru </div></div>
+                <div class="col-sm-4 "><div style="font-size:20px;font-weight:bold">GENIUS GATE</div> <div style="font-size:14px;color:#000">Simulasi | Seleksi Nasional Penerimaan Mahasiswa Baru </div></div>
                 <div class="col-sm-4 text-center"><div style="font-size:14px;color:#576574">Nomor Soal</div> <div style="font-size:20px;font-weight:bold" id="noSoal">1</div></div>
                 <div class="col-sm-4 text-right pb-1">
                     <table class="top-table">
@@ -142,7 +142,7 @@
                 <td><input value="d2" id="D2" type="checkbox" name="answerD"></td>
               </tr>
               <tr class="pilihanK" id="pilihanKe">
-                <td scope="row" id="ke_label" style="text-align: justify;">Brits Edu Center</td>
+                <td scope="row" id="ke_label" style="text-align: justify;">GENIUS GATE</td>
                 <td><input value="e1" id="E1" type="checkbox" name="answerE"></td>
                 <td><input value="e2" id="E2" type="checkbox" name="answerE"></td>
               </tr>
