--- a/views/dashboard/admin/input-soal-page.ejs
+++ b/views/dashboard/admin/input-soal-page.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Input soal | Brits Edu Center</title>
+    <title>Input soal | Genius gate</title>
     <%- include('../../partials/head') %>
         <link crossorigin="anonymous"
             integrity="sha384-7kltdnODhBho8GSWnwD9l9rilXkpuia4Anp4TKHPOrp8/MS/+083g4it4MYED/hc"
@@ -98,8 +98,8 @@
                                                     </div>
                                                     Welcome, Master!
                                                 </h1>
-                                                <div class="page-header-subtitle">Brits Edu Center, <span
-                                                        style="font-style: italic;">Teman belajarmu</span></div>
+                                                <div class="page-header-subtitle">Genius gate, <span
+                                                        style="font-style: italic;">your key to excel</span></div>
                                             </div>
                                         </div>
                                     </div>
