--- a/views/dashboard/admin/master-tentor.ejs
+++ b/views/dashboard/admin/master-tentor.ejs
@@ -971,7 +971,7 @@
             img.onload = function() {
                 doc.addImage(img, 'PNG', 247, 5, 50, 50); // Positioning the image at the top right
             };
-            doc.text(`Sesi Mengajar ${month} ${year} - Brits Edu Center`, 148, 15, { align: 'center' });
+            doc.text(`Sesi Mengajar ${month} ${year} - Genius Gate`, 148, 15, { align: 'center' });
             
             // Reset text color
             doc.setTextColor(0, 0, 0);
