--- a/views/dashboard/user/handbook.ejs
+++ b/views/dashboard/user/handbook.ejs
@@ -28,7 +28,7 @@
                                         <div class="page-header-icon"><i data-feather="alert-circle"></i></div>
                                         Halo, Sobat GG
                                     </h1>
-                                    <div class="page-header-subtitle">Brits Edu Center, <span style="font-style: italic;">Teman belajarmu</span></div>
+                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                             </div>
                         </div>
