--- a/views/dashboard/user/mini-to.ejs
+++ b/views/dashboard/user/mini-to.ejs
@@ -28,7 +28,7 @@
                                         <div class="page-header-icon"><i data-feather="alert-circle"></i></div>
                                         Halo, Sobat GG
                                     </h1>
-                                    <div class="page-header-subtitle">Brits Edu Center, <span style="font-style: italic;">Teman belajarmu</span></div>
+                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                             </div>
                         </div>
@@ -39,8 +39,8 @@
                     <div class="card mt-n10">
                         <div class="card-header">Mini Try Out!</div>
                         <div class="card-body">
-                            <p style="margin-bottom: 0px;">Ikuti instruksi di bawah ini untuk dapatkan Mini TO gratis dari Brits Edu Center!</p>
-                            <p style="margin-bottom: 5px;">Kunjungi Instagram Brits Edu Center, cari postingan di bawah...</p>
+                            <p style="margin-bottom: 0px;">Ikuti instruksi di bawah ini untuk dapatkan Mini TO gratis dari Genius Gate!</p>
+                            <p style="margin-bottom: 5px;">Kunjungi Instagram Genius Gate, cari postingan di bawah...</p>
                             <img class="img-fluid"  src="<%= hostname %>assets/img/postingan-1.png" style="width: 600px;" />
                             <p style="margin-top: 10px;margin-bottom: 5px;">Cari hashtag yang berisi 6 Huruf acak, postingannya jangan lupa di like ya ❤️</p>
                             <p style="margin-bottom: 5px;">Simpan huruf acak yang sudah kamu dapatkan, lanjut cari postingan ini...</p>
