--- a/views/signup-bak.ejs
+++ b/views/signup-bak.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Brits Edu Center</title>
+    <title>Genius Gate</title>
     <%- include('./partials/head') %>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
@@ -120,7 +120,7 @@
 
   </form>
   <footer class="footer">
-    <p>Copyright © <a style="color: white;" href="<%= hostname %>">Brits Edu Center</a> 2024 | mr.d</p> 
+    <p>Copyright © <a style="color: white;" href="<%= hostname %>">Genius Gate</a> 2024 | mr.d</p> 
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
