--- a/views/snbt.ejs
+++ b/views/snbt.ejs
@@ -23,7 +23,7 @@
                     <h3 class="display-6 fw-bold pb-md-4" data-aos="fade-right" data-aos-duration="1000" style="color: black;">Persiapkan dirimu untuk&nbsp;<span style="position: relative;">SNBT 2025</span></h3>
                 </div>
                 <div class="col-md-6 pt-4">
-                    <p class="text-muted mb-4" data-aos="fade-up" data-aos-duration="950">Brits Edu Center bimbel privat #1 di Makassar, Tenaga pengajar profesional berasal dari top 10 universitas di Indonesia</p>
+                    <p class="text-muted mb-4" data-aos="fade-up" data-aos-duration="950">Genius Gate bimbel privat #1 di Makassar, Tenaga pengajar profesional berasal dari top 10 universitas di Indonesia</p>
                 </div>
             </div>
             <div class="row gy-4 gy-md-0">
@@ -109,7 +109,7 @@
             <div class="row mb-2"> 
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <h2 class="display-6 fw-bold mb-5"><span class="pb-3 underline">FAQ<br></span></h2>
-                    <p class="text-muted mb-5">Masih bingung dengan Brits Edu Center? Yuk baca ini dulu biar ga bingung lagi</p>
+                    <p class="text-muted mb-5">Masih bingung dengan Genius Gate? Yuk baca ini dulu biar ga bingung lagi</p>
                 </div>
             </div>
             <%- include('partials/faqs', { faqs: faqs }) %>
