--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dashboard GG</title>
+        <title>Dashboard BritsEdu</title>
         <%- include('./partials/head') %>
         <link href="/dashboard/css/styles.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
