--- a/views/dashboard/admin/soal.ejs
+++ b/views/dashboard/admin/soal.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dashboard GG</title>
+        <title>Dashboard Britsedu</title>
         <%- include('../../partials/head') %>
         <script>
             window.MathJax = {
@@ -78,7 +78,7 @@
                                         <div class="page-header-icon"><i data-feather="alert-circle"></i></div>
                                         Welcome, Master!
                                     </h1>
-                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
+                                    <div class="page-header-subtitle">Britsedu, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                             </div>
                         </div>
