--- a/views/dashboard/user/not-member.ejs
+++ b/views/dashboard/user/not-member.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dashboard GG</title>
+        <title>Dashboard Britsedu</title>
         <%- include('../../partials/head') %>
         <link href="<%= hostname %>dashboard/css/styles.css" rel="stylesheet" />
         <link rel="icon" type="image/x-icon" href="assets/img/5.png" />
@@ -28,7 +28,7 @@
                                         <div class="page-header-icon"><i data-feather="alert-circle"></i></div>
                                         Halo, Sobat GG
                                     </h1>
-                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
+                                    <div class="page-header-subtitle">Britsedu, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                 <div class="container-xl px-4">
                     
                    <div class="card mt-n10" style="padding: 10px;">
-                    <div class="card-header">Daftar di Genius Gate</div>
+                    <div class="card-header">Daftar di Britsedu</div>
                     <div class="card-body">
                         Kamu belum terdaftar sebagai Siswa GG!
                     </h1>
