--- a/views/partials/header-snbt.ejs
+++ b/views/partials/header-snbt.ejs
@@ -5,7 +5,7 @@
                 <div class="text-start genius-hero p-4 p-md-5">
                     <h1 class="display-4 fw-bold centered-android" data-aos="fade-right" data-aos-duration="1500" style="color: black;position: relative;margin: 0;">Coming soon&nbsp;</h1>
                     <h1 class="display-4 fw-bold centered-android text-gradient" data-aos="fade-up" data-aos-duration="1250" data-aos-delay="550" style="margin: 0;">TryOut SNBT</h1>
-                    <p class="fs-5 mb-5 centered-android" data-aos="fade-right" data-aos-duration="1400" data-aos-delay="550"><span style="color: rgb(125, 125, 125);">Siapkan dirimu menghadapi SNBT dengan&nbsp;</span><span class="fw-bold text-gradient">TO GG</span>&nbsp;<span style="color: rgb(125, 125, 125);">setiap hari</span></p>
+                    <p class="fs-5 mb-5 centered-android" data-aos="fade-right" data-aos-duration="1400" data-aos-delay="550"><span style="color: rgb(125, 125, 125);">Siapkan dirimu menghadapi SNBT dengan&nbsp;</span><span class="fw-bold text-gradient">TO BritsEdu</span>&nbsp;<span style="color: rgb(125, 125, 125);">setiap hari</span></p>
                     <form class="d-flex justify-content-center flex-wrap" method="post" data-bs-theme="light">
                         <div class="shadow-lg mb-3"></div>
                         <div class="shadow-lg mb-3" data-aos="fade-left" data-aos-duration="1100" data-aos-delay="1000"><a href="#"><button class="btn btn-primary" type="button">Daftar sekarang</button></a></div>
