--- a/views/partials/modal-snbt.ejs
+++ b/views/partials/modal-snbt.ejs
@@ -19,7 +19,7 @@
                     </li>
                 </ul>
                 <p><img src="<%= hostname %>/assets/img/paket-soal-to-snbt.jpg" alt="Simulasi Ujian" class="img-fluid">
-                <figcaption class="text-center">Paket Soal SNBT Genius Gate</figcaption>
+                                        <figcaption class="text-center">Paket Soal SNBT BritsEdu</figcaption>
                 </p>
                 
                 <h5>💡 Kenapa Bergabung dengan Kami?</h5>
@@ -32,7 +32,7 @@
                 <p><strong>🎁 DAFTAR SEKARANG</strong> dan nikmati <strong>diskon spesial</strong> untuk pendaftaran awal! Jangan lewatkan kesempatan emas ini untuk mengoptimalkan peluangmu!</p>
                 <p>Kelas online dimulai pada tanggal <strong>9 Desember 2024</strong> yang dilanjutkan offline pada  <strong>awal tahun 2025</strong></p>
 
-                <p>🚀 <strong>Siap menuju universitas impianmu bersama Genius Gate!</strong></p>
+                                        <p>🚀 <strong>Siap menuju universitas impianmu bersama BritsEdu!</strong></p>
                 
             </div>
             <div class="modal-footer">
