--- a/views/dashboard/admin/edit-paket-soal.ejs
+++ b/views/dashboard/admin/edit-paket-soal.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dashboard GG</title>
+        <title>Dashboard BritsEdu</title>
         <%- include('../../partials/head') %>
         <link href="<%= hostname %>dashboard/css/styles.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
@@ -47,7 +47,7 @@
                                         <div class="page-header-icon"><i data-feather="alert-circle"></i></div>
                                         Welcome, Master!
                                     </h1>
-                                    <div class="page-header-subtitle">Genius gate, <span style="font-style: italic;">your key to excel</span></div>
+                                    <div class="page-header-subtitle">BritsEdu, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                             </div>
                         </div>
