--- a/views/dashboard/admin/master-tentor.ejs
+++ b/views/dashboard/admin/master-tentor.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard GG</title>
+    <title>Dashboard Britsedu</title>
     <%- include('../../partials/head') %>
     <link href="<%= hostname %>dashboard/css/styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
     <style>
-        .bg-geniusgate {
+        .bg-britsedu {
             background-color: #bd592f;
         }
         .text-primary {
@@ -971,7 +971,7 @@
             img.onload = function() {
                 doc.addImage(img, 'PNG', 247, 5, 50, 50); // Positioning the image at the top right
             };
-            doc.text(`Sesi Mengajar ${month} ${year} - Genius Gate`, 148, 15, { align: 'center' });
+            doc.text(`Sesi Mengajar ${month} ${year} - Britsedu`, 148, 15, { align: 'center' });
             
             // Reset text color
             doc.setTextColor(0, 0, 0);
