--- a/views/partials/banner-contact-us.ejs
+++ b/views/partials/banner-contact-us.ejs
@@ -3,7 +3,7 @@
         <div class="border rounded border-0 d-flex flex-column justify-content-between flex-lg-row p-4 p-md-5 bg-gradient-primary text-white">
             <div class="pb-2 pb-lg-1">
                 <h2 class="fw-bold mb-2">Bingung mau pilih paket yang mana?</h2>
-                <p class="mb-0">Tenang, GG akan bantu menemukan paket yang terbaik sesuai dengan kebutuhanmu!</p>
+                <p class="mb-0">Tenang, BritsEdu akan bantu menemukan paket yang terbaik sesuai dengan kebutuhanmu!</p>
             </div>
             <div class="my-2"><a class="btn fs-5 py-2 px-4 btn-light" role="button" href="contacts" style="background-color: white; color: var(--bs-primary); font-weight: 600;">Hubungi kami</a></div>
         </div>
