--- a/views/signup-complete.ejs
+++ b/views/signup-complete.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Genius Gate</title>
+    <title>BritsEdu</title>
     <%- include('./partials/head') %>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
@@ -85,10 +85,10 @@
         <div class="form-group">
             <label class="form-label">Program yang dipilih</label>
             <select class="form-control" name="program" id="program" onchange="showProgramDetails()" style="margin-bottom: 3px;">
-                <option value="gg-lite">GG Lite</option>
-                <option value="gg-pro">GG Pro</option>
-                <option value="gg-plus">GG Plus</option>
-                <option value="gg-promax">GG Pro Max</option>
+                                            <option value="britsedu-lite">BritsEdu Lite</option>
+                            <option value="britsedu-pro">BritsEdu Pro</option>
+                            <option value="britsedu-plus">BritsEdu Plus</option>
+                            <option value="britsedu-promax">BritsEdu Pro Max</option>
 
             </select>
             <div id="programDetails" style="text-align: start; margin-bottom: 10px; font-size: 12px; padding-left:20px ;">
@@ -120,7 +120,7 @@
 
   </form>
   <footer class="footer">
-    <p>Copyright © <a style="color: white;" href="<%= hostname %>">Genius Gate</a> 2024 | mr.d</p> 
+                    <p>Copyright © <a style="color: white;" href="<%= hostname %>">BritsEdu</a> 2024 | mr.d</p> 
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
