--- a/views/snbt.ejs
+++ b/views/snbt.ejs
@@ -23,7 +23,7 @@
                     <h3 class="display-6 fw-bold pb-md-4" data-aos="fade-right" data-aos-duration="1000" style="color: black;">Persiapkan dirimu untuk&nbsp;<span style="position: relative;">SNBT 2025</span></h3>
                 </div>
                 <div class="col-md-6 pt-4">
-                    <p class="text-muted mb-4" data-aos="fade-up" data-aos-duration="950">Genius Gate bimbel privat #1 di Makassar, Tenaga pengajar profesional berasal dari top 10 universitas di Indonesia</p>
+                    <p class="text-muted mb-4" data-aos="fade-up" data-aos-duration="950">BritsEdu bimbel privat #1 di Makassar, Tenaga pengajar profesional berasal dari top 10 universitas di Indonesia</p>
                 </div>
             </div>
             <div class="row gy-4 gy-md-0">
@@ -51,7 +51,7 @@
                                     </svg>
                                     <h5 class="fw-bold mb-0 ms-2">Masih sekolah?</h5>
                                 </div>
-                                <p class="text-muted my-3">Tenang! Kami ada program intensif untuk kamu yang baru lulus sekolah. GG akan bimbing hingga H-1 SNBT</p>
+                                <p class="text-muted my-3">Tenang! Kami ada program intensif untuk kamu yang baru lulus sekolah. BritsEdu akan bimbing hingga H-1 SNBT</p>
                             </div>
                             <div class="col text-center text-md-start">
                                 <div class="d-flex justify-content-center align-items-center justify-content-md-start"><svg xmlns="https://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-home fs-3 icon-gg">
@@ -76,7 +76,7 @@
                                     </svg>
                                     <h5 class="fw-bold mb-0 ms-2">Try Out Premium</h5>
                                 </div>
-                                <p class="text-muted my-3" style="text-align: justify;">Try Out mirip dengan SNBT asli, ada fitur analisis skor yang bisa tracking perkembangan belajarmu selama di GG!</p>
+                                <p class="text-muted my-3" style="text-align: justify;">Try Out mirip dengan SNBT asli, ada fitur analisis skor yang bisa tracking perkembangan belajarmu selama di BritsEdu!</p>
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
             <div class="row mb-2"> 
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <h2 class="display-6 fw-bold mb-5"><span class="pb-3 underline">FAQ<br></span></h2>
-                    <p class="text-muted mb-5">Masih bingung dengan Genius Gate? Yuk baca ini dulu biar ga bingung lagi</p>
+                    <p class="text-muted mb-5">Masih bingung dengan BritsEdu? Yuk baca ini dulu biar ga bingung lagi</p>
                 </div>
             </div>
             <%- include('partials/faqs', { faqs: faqs }) %>
