--- a/views/to-snbt.ejs
+++ b/views/to-snbt.ejs
@@ -33,7 +33,7 @@
                                 <h6 class="fw-bold text-muted">1 Subtest (Bebas pilih)</h6>
                                 <h4 class="display-5 fw-bold mb-4">Rp. 5.000</h4>
                                 <ul class="list-unstyled">
-                                    <li class="d-flex mb-2"><span>Coba 1 paket subtes full dari GG</span></li>
+                                    <li class="d-flex mb-2"><span>Coba 1 paket subtes full dari BritsEdu</span></li>
                                 </ul>
                             </div><a class="btn btn-primary" role="button" href="#">Start Practice</a>
                         </div>
