--- a/views/dashboard/admin/fullDetailedNilai.ejs
+++ b/views/dashboard/admin/fullDetailedNilai.ejs
@@ -241,6 +241,18 @@
                                 </table>
                             </div>
 
+                            <% if (totalPages > 1) { %>
+                                <nav class="mt-4">
+                                    <ul class="pagination">
+                                        <% for(let i = 1; i <= totalPages; i++) { %>
+                                            <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                                                <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+                                            </li>
+                                        <% } %>
+                                    </ul>
+                                </nav>
+                            <% } %>
+
                             <div class="mt-4">
                                 <h5 class="mb-3">Kunci Jawaban:</h5>
                                 <div class="row">
