--- a/views/dashboard/admin/fullDetailedNilai.ejs
+++ b/views/dashboard/admin/fullDetailedNilai.ejs
@@ -170,6 +170,9 @@
                                 <button class="btn btn-sm btn-success" onclick="exportSummaryToExcel()">
                                     <i data-feather="file-spreadsheet" style="margin-right: 5px;"></i>Export Summary Excel
                                 </button>
+                                <a href="/admin/manajemen-soal/export-nilai-detail/<%= kodekategori %>" class="btn btn-sm btn-info">
+                                    <i data-feather="file-text" style="margin-right: 5px;"></i>Export Semua Data Excel
+                                </a>
                             </div>
                             <div class="table-wrapper">
                                 <table class="table table-bordered">
