--- a/views/dashboard/admin/master-token.ejs
+++ b/views/dashboard/admin/master-token.ejs
@@ -165,7 +165,7 @@
                                     <div class="page-header-subtitle">Britsedu, <span style="font-style: italic;">your key to excel</span></div>
                                 </div>
                                 <div class="col-12 col-xl-auto mt-4">
-                                    <a class="btn btn-white" href="/admin/token/tambah">
+                                    <a class="btn btn-white" href="/admin/manajemen-token/tambah-token">
                                         <i data-feather="plus"></i>
                                         Tambah Token Baru
                                     </a>
