--- a/views/dashboard/admin/fullDetailedNilai.ejs
+++ b/views/dashboard/admin/fullDetailedNilai.ejs
@@ -370,7 +370,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="<%= hostname %>dashboard/js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" crossorigin="anonymous"></script>
+        <script src="<%= hostname %>dashboard/js/scripts.js"></script>
     <script>
         // Function to change page size
         function changePageSize(newLimit) {
