--- a/views/dashboard/user/index.ejs
+++ b/views/dashboard/user/index.ejs
@@ -151,6 +151,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" crossorigin="anonymous"></script>
     <script src="<%= hostname %>dashboard/js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script src="<%= hostname %>dashboard/js/datatables/datatables-simple-demo.js"></script>
@@ -300,6 +301,7 @@
     
     <!-- Load essential scripts for layout functionality -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" crossorigin="anonymous"></script>
     <script src="<%= hostname %>dashboard/js/scripts.js"></script>
  
